# clifford-3-even

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  rotor.rs
