[package]
name = "clifford-3-even"
version = "0.1.1"
edition = "2024"
authors = ["Michael Nelson <absoludity@gmail.com>"]
description = "A simple implementation of the even sub-algebra of 3-dimensional clifford algebra, specifically for qubit processing"
repository = "https://github.com/absoludity/clifford-3-even"
license = "MIT OR Apache-2.0"
keywords = ["clifford", "qubit"]

[dependencies]

[dev-dependencies]
rstest = "0.18.2"
